Fix vertical grid spacing

--- a/site/scss/styles.scss
+++ b/site/scss/styles.scss
@@ -27,6 +27,7 @@
 
 .grid-item {
     padding: 5px;
+    font-size: 0;
 }
 
 .credits {
